--- a/src/styles/sections/footer.scss
+++ b/src/styles/sections/footer.scss
@@ -1,5 +1,5 @@
 .footer{
-  background: #ccc url('../images/footer_bg.png') no-repeat;
+  background: #ccc url('/img/footer_bg.png') no-repeat;
   &__top{
     background-color: #1175b7;
 
