--- a/src/styles/sections/forma.scss
+++ b/src/styles/sections/forma.scss
@@ -4,7 +4,7 @@
     min-height: 745px;
     position: relative;
     color: #fff;
-    background: #ccc url('../images/form.png') no-repeat;
+    background: #ccc url('/img/form.png') no-repeat;
 
   }
 
