--- a/src/index.pug
+++ b/src/index.pug
@@ -4,7 +4,7 @@ html(lang='ru')
         meta(charset='UTF=8')
         meta(http-equiv='X-UA-Compatible', content="IE=edge")
         meta(name='viewport' content='width=device-width')
-        link(rel="stylesheet" href="css/main.min.css")
+        link(rel="stylesheet" href="styles/style.css")
         title H.Cleaning
         body
             include sections/header
