--- a/src/styles/sections/aboutus.scss
+++ b/src/styles/sections/aboutus.scss
@@ -4,7 +4,7 @@
   min-height: 745px;
   position: relative;
   color: #fff;
-  background: #ccc url('../images/men.png') no-repeat;
+  background: #ccc url('/img/men.png') no-repeat;
 
   }
   .tells{
