--- a/src/styles/sections/deliv.scss
+++ b/src/styles/sections/deliv.scss
@@ -1,6 +1,6 @@
 .deliv{
   min-height: 1000px;
-  background:  url('../images/deliv_back.png') no-repeat;
+  background:  url('/img/deliv_back.png') no-repeat;
   color:#fff;
   padding: 125px 0 0 0;
   text-align:center;
