--- a/src/styles/sections/hero.scss
+++ b/src/styles/sections/hero.scss
@@ -3,7 +3,7 @@
   padding: 260px 0;
   text-align:center;
   color: #fff;
-  background: #ccc url('../images/hero-bg.png') center/cover no-repeat;
+  background: #ccc url('/img/hero-bg.png') center/cover no-repeat;
 
 
   &__about{
